# JWS-Test-Suite

./: .gitignore  README.md  agenda.md  docker-compose.yml  evaluate.js  generate.js  package-lock.json  package.json  script.js
implementations/spruce/: Cargo.toml  Dockerfile  credential-0--key-0-ed25519.json  credential-0--key-0-ed25519.vc-jwt.json  credential-0--key-0-ed25519.vc.json  credential-0--key-1-secp256k1.json  credential-0--key-1-secp256k1.vc-jwt.json  credential-0--key-1-secp256k1.vc.json  credential-0--key-2-secp256r1.json  credential-0--key-2-secp256r1.vc-jwt.json  credential-0--key-2-secp256r1.vc.json  credential-0--key-3-secp384r1.vc-jwt.json  credential-0--key-3-secp384r1.vc.json  credential-0--key-4-rsa2048.json  credential-0--key-4-rsa2048.vc-jwt.json  credential-0--key-4-rsa2048.vc.json  credential-1--key-0-ed25519.json  credential-1--key-0-ed25519.vc-jwt.json  credential-1--key-0-ed25519.vc.json  credential-1--key-1-secp256k1.json  credential-1--key-1-secp256k1.vc-jwt.json  credential-1--key-1-secp256k1.vc.json  credential-1--key-2-secp256r1.json  credential-1--key-2-secp256r1.vc-jwt.json  credential-1--key-2-secp256r1.vc.json  credential-1--key-3-secp384r1.vc-jwt.json  credential-1--key-3-secp384r1.vc.json  credential-1--key-4-rsa2048.json  credential-1--key-4-rsa2048.vc-jwt.json  credential-1--key-4-rsa2048.vc.json  credential-2--key-0-ed25519.json  credential-2--key-0-ed25519.vc-jwt.json  credential-2--key-0-ed25519.vc.json  credential-2--key-1-secp256k1.json  credential-2--key-1-secp256k1.vc-jwt.json  credential-2--key-1-secp256k1.vc.json  (+62 more)
(+656 files in other folders)
