[package]
name = "ssi-jws"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
ssi = { git = "https://github.com/spruceid/ssi", rev = "dbe7c07cc6790e16d9da263112fc4e680bc5bb1a", features = ["secp256k1", "secp256r1", "keccak-hash"] }
structopt = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
atty = "0.2"
