[package]
name = "ssi-jws"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
ssi = { git = "https://github.com/spruceid/ssi", rev = "8dc91a17fc43ee55aa67ec6bdb9a49a7734ebf4e", features = ["secp256k1", "secp256r1", "keccak-hash", "openssl"] }
structopt = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
atty = "0.2"
